--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 fastapi==0.108.0
 uvicorn==0.25.0
+Jinja2==3.1.4
+# Handing form data
+python-multipart==0.0.20
 numpy==1.21.6
 matplotlib==3.5.3
 python-docx==0.8.11
 docx-mailmerge==0.5.0
-Jinja2==3.1.4
